--- a/COIN/team.html
+++ b/COIN/team.html
@@ -37,7 +37,7 @@
 </li>
 <li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin, Ireland</p>
 </li>
-<li><p><a href="Misc\Curriculum_Vitae_PHAM.pdf">Curriculum Vitae</a>, 
+<li><p><a href="..\Misc\Curriculum_Vitae_Pham.pdf">Curriculum Vitae</a>, 
 <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, 
 <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>, 
 <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, 
@@ -145,7 +145,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 <ul>
 <li><p>PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02.</p>
 </li>
-<li><p>Current position: Lecturer, Hue University, Vietnam</p>
+<li><p>Current position: Lecturer, Hue University, Vietnam.</p>
 </li></ul>
 </li>
 <li><p>Nguyen Tien Hoang </p>
@@ -178,7 +178,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 09:44:13 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 12:10:33 GMT Daylight Time.
 </div>
 </div>
 </td>
