--- a/COIN/collaborator.html
+++ b/COIN/collaborator.html
@@ -29,6 +29,8 @@
 <p><div id="Collaborators"></p>
 <h2>Collaborators</h2>
 <ul>
+<li><p><a href="https://www.scss.tcd.ie/Siobhan.Clarke/">Prof. Siobhan Clarke</a>: Trinity College Dublin, the University of Dublin, Ireland</p>
+</li>
 <li><p><a href="https://wireless-ai.github.io/">Prof. Won-Joo Hwang</a>: Pusan National University (PNU), Korea</p>
 </li>
 <li><p><a href="http://www2.egr.uh.edu/~zhan2/">Prof. Zhu Han</a>: University of Houston, USA</p>
@@ -87,7 +89,7 @@
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 09:45:33 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 12:54:31 GMT Daylight Time.
 </div>
 </div>
 </td>
