--- a/COIN/opening.html
+++ b/COIN/opening.html
@@ -27,10 +27,12 @@
 <h1>COIN - Openings</h1>
 </div>
 <p><b>Prospective Students</b>:
-Please email Dr. Pham with your resume, motivation letter, scholastic transcripts, and publications (if available). 
-Apologize for not receiving a confirmed email due to the volume of applications. 
+Please email Dr. Pham your resume, motivation letter, scholastic transcripts, and publications (if available). 
+Although I may not respond individually due to the volume of applications, I will thoroughly read the emails and supporting documents as I look for new students. 
 You will be contacted should further information is needed. 
-Do give a shout if you want to visit our COIN Team or have any questions.</p>
+Students working with us are usually highly self-motivated and with strong mathematical and problem-solving skills. 
+You can get a sense of the style of our work by looking at <a href="../publication.html">our publications</a>.</p>
+<p><b>Prospective Researchers</b>: Please check openings if you are qualified and want to join our COIN Team. Do give us a shout if you have any questions.</p>
 <p><div id="Openings"></p>
 <h2>Openings</h2>
 <ul>
@@ -71,7 +73,7 @@ Deadline: 24 March 2023. <b>Closed</b></p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 09:46:10 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-08 10:50:24 GMT Daylight Time.
 </div>
 </div>
 </td>
