--- a/COIN/opening.html
+++ b/COIN/opening.html
@@ -32,7 +32,7 @@ Although I may not respond individually due to the volume of applications, I wil
 You will be contacted should further information is needed. 
 Students working with us are usually highly self-motivated and with strong mathematical and problem-solving skills. 
 You can get a sense of the style of our work by looking at <a href="../publication.html">our publications</a>.</p>
-<p><b>Prospective Researchers</b>: Please check openings if you are qualified and want to join our COIN Team. Do give us a shout if you have any questions.</p>
+<p><b>Prospective Researchers</b>: Please check openings and contact us before your application preparation and application. Do give us a shout if you have any questions.</p>
 <p><div id="Openings"></p>
 <h2>Openings</h2>
 <ul>
@@ -54,13 +54,13 @@ Deadline for applications: 21 June 2023. <br /></p>
 </ul>
 <ul>
 <li><p>You are invited to apply for <a href="https://marie-sklodowska-curie-actions.ec.europa.eu/calls/msca-postdoctoral-fellowships-2023">MSCA Postdoctoral Fellowships 2023</a>. <br />
-Deadline: 13 September 2023 (proposal submisison). <br />
+Deadline: 13 September 2023 (proposal submission). <br />
 Note: You should contact me earlier to discuss our research interests and prepare the proposal. </p>
 </li>
 </ul>
 <ul>
 <li><p>Thirty (30) PhD scholarships are offered by <a href="https://www.advance-crt.ie/">SFI AdvanceCRT</a>. <br />
-Please feel free to contact me if you are qualified for this scholarship, wanna join at <a href="https://www.tcd.ie/">Trinity College Dublin</a>, or interested in working with me on emerging topics like IoT/6G/AI/Security. <br />
+Please feel free to contact me if you are qualified for this scholarship, wanna join at <a href="https://www.tcd.ie/">Trinity College Dublin</a>, or are interested in working with me on emerging topics like IoT/6G/AI/Security. <br />
 Deadline: 17 March 2023. <b>Closed</b> <br />
 Link: <a href="https://www.advance-crt.ie/apply/">ADVANCE CRT PhD recruitment call</a>. <br /></p>
 </li>
@@ -73,7 +73,7 @@ Deadline: 24 March 2023. <b>Closed</b></p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-08 10:50:24 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-08 10:58:19 GMT Daylight Time.
 </div>
 </div>
 </td>
