--- a/COIN/funding.html
+++ b/COIN/funding.html
@@ -68,9 +68,22 @@ Pusan National University</p>
 </li>
 </ul>
 <p></div></p>
+<p><div id="Sponsors"></p>
+<h2>Sponsors</h2>
+<p>
+<div id="Sponsors-container">
+<div id="Sponsor">
+<img src="Misc/Sponsors/Enterprise_Ireland.jpg" style="width:250px">    
+<img src="Misc/Sponsors/NRF_logo.png" style="width:250px">    
+<img src="Misc/Sponsors/BK21_logo.jpg" style="width:250px">    
+<img src="Misc/Sponsors/Nazarbayev_University.png" style="width:250px">    
+</div>
+</div>
+</p>
+<p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 10:06:06 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-08 12:51:48 GMT Daylight Time.
 </div>
 </div>
 </td>
