--- a/COIN/home.html
+++ b/COIN/home.html
@@ -55,11 +55,12 @@
 <h2>About COIN</h2>
 <p>COIN-ers are pioneers in world-leading research into computing, intelligence, and networking. 
 COIN-Lab is led by <a href="../index.html">Professor Viet Quoc Pham</a> in the School of Computer Science and Statistics at Trinity College Dublin. 
-Join and visit COIN-Lab@TCD to realize our ideas and improve emerging IT/wireless services and applications.</p>
+Our research is highly interdisciplinary and exploit an arsenal of tools from network optimization, game theory, machine learning, 
+statistics, and economics to design and build future network systems and improve emerging IT/wireless services and applications.</p>
 <p><div id="About COIN"></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 15:25:31 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-08 12:22:25 GMT Daylight Time.
 </div>
 </div>
 </td>
