--- a/index.html
+++ b/index.html
@@ -126,12 +126,24 @@ Assistant Professor, Ph.D. <br />
 <p></div></p>
 <p><div id="About Me"></p>
 <h2>About Me <a href="Misc\Curriculum_Vitae_Pham.pdf"><font color=red size=+0.5>(<b>CV</a> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=red size=+0.5></b>CV of Failure</a><b></font></b></font> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5><b>Photo</a>)</b></font></font></h2>
-<p>Quoc-Viet Pham received the B.Sc. degree in electronics and telecommunications engineering from Hanoi University of Science and Technology, Vietnam, in 2013, and the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. He is currently an Assistant Professor in Networks and Distributed Systems with the School of Computer Science and Statistics, Trinity College Dublin (TCD), The University of Dublin, Ireland. He is also serving as an ADVANCE CRT supervisor and an Associate Investigator at the CONNECT centre. Prior to joining TCD, he was in various academic positions with Kyung Hee University (postdoctoral researcher, 2017-2018), Changwon National University (research professor, 2018-2019), and Pusan National University (research professor, 2020-2023). </p>
-<p>He specializes in applying convex optimization, game theory, and machine learning to analyse and optimize cloud edge computing, wireless networks, and IoT systems. Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). He was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, and a co-recipient of an IEEE ATC Best Paper Award in 2022. He is an Editor of the Journal of Network and Computer Applications and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications.</p>
+<p>Quoc-Viet Pham received the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. 
+He is currently an Assistant Professor in Networks and Distributed Systems with the School of Computer Science and Statistics, Trinity College, The University of Dublin, Ireland. 
+He is also an ADVANCE CRT supervisor and an Associate Investigator at the CONNECT centre, Ireland. 
+Prior to joining TCD, he was in various academic positions with Kyung Hee University (postdoctoral researcher, 2017-2018), Changwon National University (research professor, 2018-2019), and Pusan National University (research professor, 2020-2023). </p>
+<p>He specialises in applying convex optimisation, game theory, and machine learning to analyse and optimise cloud edge computing, wireless networks, and IoT systems. 
+Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). 
+He was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. 
+He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, 
+the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, 
+and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, 
+a co-recipient of an IEEE ATC Best Paper Award in 2022,
+and Enterprise Ireland Coordination Support Award in 2023. 
+He is an Editor of the Journal of Network and Computer Applications and Scientific Reports, 
+and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications.</p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 12:38:41 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-08 15:13:47 GMT Daylight Time.
 </div>
 </div>
 </td>
