--- a/publication.html
+++ b/publication.html
@@ -71,7 +71,7 @@
 <ol>
 <li><p>M. Le, <b>Q.-V. Pham</b>, T. Huynh-The, T. Do-Duy, T.-H. Vu, and W.-J. Hwang &ldquo;<a href="">Applications of Distributed Machine Learning for Future Internet: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
 </li>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="">THz-based Rate-Splitting Multiple-Access (RSMA): Is It Better Than NOMA?</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>.</p>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="">THz-based Rate-Splitting Multiple-Access (RSMA): Is It Better Than NOMA?</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
 <li><p>N. C. Luong, <b>Q.-V. Pham</b>, T. Huynh-The, V. D. Nguyen, D. W. K. Ng, S. Chatzinotas, and D. Niyato, &ldquo;<a href="https://arxiv.org/abs/2212.06463">Edge Computing for Semantic Communication Enabled Metaverse: An Incentive Mechanism Design</a>,&rdquo; under review, <i>IEEE Network</i>.</p>
 </li>
@@ -102,7 +102,7 @@
 <p><div id="2022 and In Press"></p>
 <h2>2023 and In Press</h2>
 <ol>
-<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">STAR-RIS Enabled Short-Packet NOMA Systems</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
+<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10132045">STAR-RIS Enabled Short-Packet NOMA Systems</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://ieeexplore.ieee.org/document/10109100">AI-enabled mm-Waveform Configuration for Autonomous Vehicles with Integrated Communication and Sensing</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
 </li>
@@ -250,7 +250,7 @@
 </li>
 </ol>
 <p></div></p>
-<p><div id="2020"></p>
+<p><div id="2020 and Before"></p>
 <h2>2020</h2>
 <ol>
 <li><p>M. J. Piran, <b>Q.-V. Pham</b>, S. M. R. Islam, S. Cho, B. Bae, D.-Y. Suh, and Z. Han, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S1084804520302332">Multimedia Communication over Cognitive Radio Networks from QoS/QoE Perspective: A Comprehensive Survey</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, vol. 172, no. 10, pp. 102759, Dec. 2020.</p>
@@ -277,11 +277,6 @@
 </li>
 <li><p><b>Q.-V. Pham</b>, Hoang T. Nguyen, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/8917566">Coalitional Games for Computation Offloading in NOMA-Enabled Multi-Access Edge Computing</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 2, pp. 1982-1993, Feb. 2020.</p>
 </li>
-</ol>
-<p></div></p>
-<p><div id="2019 and Before"></p>
-<h2>2019 and Before</h2>
-<ol>
 <li><p>G. G. Girmay, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/8648180">Joint Channel and Power Allocation for D2D on Licensed and Unlicensed Band</a>,&rdquo; <i>IEEE Access</i>, vol. 7, pp. 22196-22205, Feb. 2019.  </p>
 </li>
 <li><p><b>Q.-V. Pham</b>, L. B. Le, S.-H. Chung, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/8630957">Mobile Edge Computing with Wireless Backhaul: Joint Task Offloading and Computation Resource</a>,&rdquo; <i>IEEE Access</i>, vol. 7, pp. 16444-16459, Jan. 2019. </p>
@@ -383,7 +378,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-17 09:10:08 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-25 13:19:54 GMT Daylight Time.
 </div>
 </div>
 </td>
