--- a/COIN/opening.html
+++ b/COIN/opening.html
@@ -36,15 +36,9 @@ You can get a sense of the style of our work by looking at <a href="../publicati
 <p><div id="Openings"></p>
 <h2>Openings</h2>
 <ul>
-<li><p><a href="https://www.tcd.ie/graduatestudies/awards/trda-group/">Trinity Research Doctorate Award 2023-24</a>: 
-If you are a computer science student with demonstrated academic excellence, please feel free to contact me to apply for <b>01 award</b> at TCD School of Computer Science and Statistics.<br />
-Application: Please check a <a href="Misc\TRDA_202324.pdf">short description</a> and contact me via email.<br />
-Deadline: 25 May 2023. <br /> </p>
-</li>
-</ul>
-<ul>
-<li><p><a href="Misc\COIN_PhDStudents_Recruitment_2023.pdf">Two fully-funded PhD scholarships</a> are available for students to join my COIN group @TCD. <br />
-Deadline for applications: 15 May 2023. <br /></p>
+<li><p>You are invited to apply for <a href="https://marie-sklodowska-curie-actions.ec.europa.eu/calls/msca-postdoctoral-fellowships-2023">MSCA Postdoctoral Fellowships 2023</a>. <br />
+Deadline: 13 September 2023 (proposal submission). <br />
+Note: You should contact me earlier to discuss our research interests and prepare the proposal. </p>
 </li>
 </ul>
 <ul>
@@ -53,9 +47,15 @@ Deadline for applications: 21 June 2023. <br /></p>
 </li>
 </ul>
 <ul>
-<li><p>You are invited to apply for <a href="https://marie-sklodowska-curie-actions.ec.europa.eu/calls/msca-postdoctoral-fellowships-2023">MSCA Postdoctoral Fellowships 2023</a>. <br />
-Deadline: 13 September 2023 (proposal submission). <br />
-Note: You should contact me earlier to discuss our research interests and prepare the proposal. </p>
+<li><p><a href="https://www.tcd.ie/graduatestudies/awards/trda-group/">Trinity Research Doctorate Award 2023-24</a>: 
+If you are a computer science student with demonstrated academic excellence, please feel free to contact me to apply for <b>01 award</b> at TCD School of Computer Science and Statistics.<br />
+Application: Please check a <a href="Misc\TRDA_202324.pdf">short description</a> and contact me via email.<br />
+Deadline: 25 May 2023. <b>Closed</b> <br /> </p>
+</li>
+</ul>
+<ul>
+<li><p><a href="Misc\COIN_PhDStudents_Recruitment_2023.pdf">Two fully-funded PhD scholarships</a> are available for students to join my COIN group @TCD. <br />
+Deadline for applications: 15 May 2023. <b>Closed</b> <br />  </p>
 </li>
 </ul>
 <ul>
@@ -73,7 +73,7 @@ Deadline: 24 March 2023. <b>Closed</b></p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-08 10:58:19 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-25 13:26:35 GMT Daylight Time.
 </div>
 </div>
 </td>
