--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Assistant Professor, Ph.D. <br />
 <p><div id="Contacts"></p>
 <h2>Contacts</h2>
 <ul>
-<li><p>E-mail: <a href="mailto:viet.pham@tcd.ie">viet.pham@tcd.ie</a></p>
+<li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
 </li>
 <li><p>Phone: (+353) 083-475-5354</p>
 </li>
@@ -143,7 +143,7 @@ and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transaction
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-08 15:13:47 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-06-26 02:21:32 Korea Standard Time.
 </div>
 </div>
 </td>
