--- a/COIN/team.html
+++ b/COIN/team.html
@@ -31,7 +31,7 @@
 <ul>
 <li><p>Viet Quoc Pham, Ph.D.<br /></p>
 </li>
-<li><p>E-mail: <a href="mailto:viet.pham@tcd.ie">viet.pham@tcd.ie</a></p>
+<li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
 </li>
 <li><p>Phone: (+353) 083-475-5354</p>
 </li>
@@ -50,27 +50,43 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 <p><div id="Students"></p>
 <h2>Students</h2>
 <ul>
+<li><p>PhD Student 1</p>
+<ul>
+<li><p>PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/09 - Present.</p>
+</li>
+<li><p>Research Topic: Blockchain-enabled intelligent security and privacy preservation for IoT data marketplace. </p>
+</li></ul>
+</li>
+<li><p>PhD Student 2</p>
+<ul>
+<li><p>PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/09 - Present.</p>
+</li>
+<li><p>Research Topic: Adaptive framework for scaling federated learning (FL) in IoT systems. </p>
+</li></ul>
+</li>
 <li><p>Thai-Hoc Vu </p>
 <ul>
-<li><p>PhD Student, <a href="https://global.ulsan.ac.kr/en/Main.do">University of Ulsan</a>, 2021/03-Present.</p>
+<li><p>PhD Student, <a href="https://global.ulsan.ac.kr/en/Main.do">University of Ulsan</a>, 2021/03 - Present.</p>
 </li>
-<li><p>Research Topic: Performance analysis of 6G short-packet communications. </p>
+<li><p>Research Topic: Performance analysis and optimization of 6G short-packet communications. </p>
 </li>
 <li><p>Co-supervised with <a href="https://sites.google.com/site/citulsan/">Professor Sunghwan Kim</a>.</p>
 </li></ul>
 </li>
 <li><p>Le Thi Mai </p>
 <ul>
-<li><p>PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2021/03-Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2021/03 - Present.</p>
 </li>
-<li><p>Research Topic: Wireless AI and aerial access networks.</p>
+<li><p>Visiting PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/05 - Present.</p>
+</li>
+<li><p>Research Topic: Wireless artificial intelligence (AI) and aerial access networks.</p>
 </li>
 <li><p>Co-supervised with <a href="https://wireless-ai.pusan.ac.kr/wireless-ai/index.do">Professor Won-Joo Hwang</a>.</p>
 </li></ul>
 </li>
 <li><p>Swe Swe Latt </p>
 <ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09 - Present.</p>
 </li>
 <li><p>Research Topic: FL and 6G resource optimization.</p>
 </li>
@@ -79,16 +95,16 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 </li>
 <li><p>Dao Thien Thanh </p>
 <ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09 - Present.</p>
 </li>
-<li><p>Research Topic: Deep learning and depth map.</p>
+<li><p>Research Topic: Deep learning for automatic modulation classification and depth map.</p>
 </li>
 <li><p>Co-supervised with <a href="https://wireless-ai.pusan.ac.kr/wireless-ai/index.do">Professor Won-Joo Hwang</a>.</p>
 </li></ul>
 </li>
 <li><p>Nguyen Minh Duong </p>
 <ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09 - Present.</p>
 </li>
 <li><p>Research Topic: DRL and FL for 6G IoT.</p>
 </li>
@@ -97,7 +113,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 </li>
 <li><p>Daeil Noh </p>
 <ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09 - Present.</p>
 </li>
 <li><p>Research Topic: Deep learning for radio signal processing.</p>
 </li>
@@ -106,7 +122,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 </li>
 <li><p>Sang Min Lee </p>
 <ul>
-<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present.</p>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09 - Present.</p>
 </li>
 <li><p>Research Topic: Communication-efficient FL for massive IoT.</p>
 </li>
@@ -122,54 +138,54 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 <ul>
 <li><p>Nadia Iradukunda </p>
 <ul>
-<li><p>PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09-2022/08.</p>
+<li><p>PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09 - 2022/08.</p>
 </li>
 <li><p>Current position: Lecturer, Mount Kenya University, Rwanda.</p>
 </li></ul>
 </li>
 <li><p>Le Thi Mai </p>
 <ul>
-<li><p>MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03-2021/02.</p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03 - 2021/02.</p>
 </li>
 <li><p>Current position: PhD student, Pusan National University, Korea.</p>
 </li></ul>
 </li>
 <li><p>Vo Ta Hoang </p>
 <ul>
-<li><p>PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2020/02.</p>
+<li><p>PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09 - 2020/02.</p>
 </li>
 <li><p>Current position: Lecturer, Thuyloi University, Vietnam.</p>
 </li></ul>
 </li>
 <li><p>Hoang Huu Trung </p>
 <ul>
-<li><p>PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02.</p>
+<li><p>PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09 - 2021/02.</p>
 </li>
 <li><p>Current position: Lecturer, Hue University, Vietnam.</p>
 </li></ul>
 </li>
 <li><p>Nguyen Tien Hoang </p>
 <ul>
-<li><p>MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08.</p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09 - 2019/08.</p>
 </li>
 <li><p>Current position: QA Project Leader, LG Innotek, Vietnam.</p>
 </li></ul>
 </li>
 <li><p>Maurice Nduwayezu </p>
 <ul>
-<li><p>MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08.</p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09 - 2019/08.</p>
 </li>
 <li><p>Current position: PhD student, SeoulTech, Korea.</p>
 </li></ul>
 </li>
 <li><p>Girmay Gebremariam Gebrelibanos </p>
 <ul>
-<li><p>MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08. </p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09 - 2019/08. </p>
 </li></ul>
 </li>
 <li><p>Akmal Azizan bin Md Zin </p>
 <ul>
-<li><p>MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08.</p>
+<li><p>MSc, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09 - 2019/08.</p>
 </li>
 </ul>
 
@@ -178,7 +194,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 12:10:33 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-06-26 02:45:23 Korea Standard Time.
 </div>
 </div>
 </td>
