--- a/COIN/contact.html
+++ b/COIN/contact.html
@@ -32,7 +32,7 @@
 <ul>
 <li><p><a href="../index.html">Dr. Viet Quoc Pham</a></p>
 </li>
-<li><p>E-mail: <a href="mailto:viet.pham@tcd.ie">viet.pham@tcd.ie</a></p>
+<li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
 </li>
 <li><p>Phone: (+353) 083-475-5354</p>
 </li>
@@ -43,7 +43,7 @@
 <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2382.0672715060036!2d-6.252936923319985!3d53.34205197228804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e90e0c600cf%3A0x9ad142d3ea06fd2!2sCONNECT%20Centre%2C%20Trinity%20College%20Dublin%2C%20the%20University%20of%20Dublin!5e0!3m2!1sen!2sie!4v1683449335645!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 10:05:11 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-06-26 02:45:53 Korea Standard Time.
 </div>
 </div>
 </td>
