--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@ Assistant Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p>[07/2023] Great news! I was invited to join the editorial board of the IEEE Communications Letters.</p>
+</li>
+<li><p>[06/2023] I visited the University of Ulsan (Korea), HUST and PTIT (Vietnam).</p>
+</li>
 <li><p>[05/2023] <font color=red size=+0.5><b>Hot!!!</b></font> I got the Enterprise Ireland Coordination Support Award. </p>
 </li>
 <li><p>[05/2023] Our workshop proposal entitled &ldquo;Edge Learning over Next-Generation Networks&rdquo; - <a href="https://globecom2023.ieee-globecom.org/">IEEE GLOBECOM 2023</a> got accepted. </p>
@@ -106,7 +110,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>M.-D. Nguyen, S.-M. Lee, Q.-V. Pham, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2023.</p>
 </li>
-<li><p>T.-H. Vu, T.-V. Nguyen, Q.-V. Pham, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9964377">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; <i>IEEE Transactions on Cognitive Communications and Networking</i>, 2023.</p>
+<li><p>T.-H. Vu, T.-V. Nguyen, Q.-V. Pham, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9964377">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; <i>IEEE Transactions on Cognitive Communications and Networking</i>, vol. 9, no. 2, pp. 463-478, Apr. 2023.</p>
 </li>
 <li><p>Q.-V. Pham, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9738797">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 11, pp. 8339-8363, Jun. 2022.</p>
 </li>
@@ -143,7 +147,7 @@ and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transaction
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-06-26 02:41:52 Korea Standard Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-07-04 23:52:17 Korea Standard Time.
 </div>
 </div>
 </td>
