--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Assistant Professor, Ph.D. <br />
 <ul>
 <li><p>[07/2023] Great news! I was invited to join the editorial board of the IEEE Communications Letters.</p>
 </li>
-<li><p>[06/2023] I visited the University of Ulsan (Korea), HUST and PTIT (Vietnam).</p>
+<li><p>[06/2023] I visited the University of Ulsan and Pusan National University (Korea), HUST and PTIT (Vietnam).</p>
 </li>
 <li><p>[05/2023] <font color=red size=+0.5><b>Hot!!!</b></font> I got the Enterprise Ireland Coordination Support Award. </p>
 </li>
@@ -147,7 +147,7 @@ and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transaction
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-07-04 23:52:17 Korea Standard Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-07-05 00:02:56 Korea Standard Time.
 </div>
 </div>
 </td>
