--- a/publication.html
+++ b/publication.html
@@ -48,9 +48,9 @@
 <p><div id="Book Chapters"></p>
 <h2>Book Chapters</h2>
 <ol>
-<li><p>T. R. Gadekallu, R. Chengoden, N. Victor, T. Huynh-The,  P. K. R. Maddikunta, <b>Q.-V. Pham</b>, and P. Hegde, &ldquo;<a href="">Blockchain Technologies for Metaverse</a>,&rdquo; in <a href=""><i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i></a>, Wiley-IEEE Press, 2023.</p>
+<li><p>T. R. Gadekallu, R. Chengoden, N. Victor, T. Huynh-The,  P. K. R. Maddikunta, <b>Q.-V. Pham</b>, and P. Hegde, &ldquo;<a href="">Blockchain Technologies for Metaverse</a>,&rdquo; in <a href="https://www.amazon.com/Metaverse-Communication-Computing-Networks-Applications/dp/1394159986"><i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i></a>, Wiley-IEEE Press, 2023.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. Do-Duy, and T. R. Gadekallu, &ldquo;<a href="">AI and Computer Vision Technologies for Metaverse</a>,&rdquo; in <a href=""><i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i></a>, Wiley-IEEE Press, 2023.</p>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. Do-Duy, and T. R. Gadekallu, &ldquo;<a href="">AI and Computer Vision Technologies for Metaverse</a>,&rdquo; in <a href="https://www.amazon.com/Metaverse-Communication-Computing-Networks-Applications/dp/1394159986"><i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i></a>, Wiley-IEEE Press, 2023.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738">The Emergence of Aerial Computing: Applications and Challenges</a>,&rdquo; in <a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738"><i>6G Wireless: The Communication Paradigm Beyond 2030</i></a>, CRC Press, 2022.</p>
 </li>
@@ -69,9 +69,17 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, N. C. Luong, H. Phan, and D. B. da Costa, &ldquo;<a href="">Improved Waveform Classification for Integrated Radar-Communication 6G Systems via Convolutional Neural Networks</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>, 2023.</p>
+</li>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Rate-Splitting Multiple Access-Assisted THz-Based Short-Packet Communications</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>, 2023.  </p>
+</li>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Performance Analysis of RSMA-aided UAV-to-Ground Communications</a>,&rdquo; submitted, <i>IEEE Global Communications Conference (GLOBECOM)</i>, 2023.</p>
+</li>
+<li><p>M. Le, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang &ldquo;<a href="">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
+</li>
 <li><p>M. Le, <b>Q.-V. Pham</b>, T. Huynh-The, T. Do-Duy, T.-H. Vu, and W.-J. Hwang &ldquo;<a href="">Applications of Distributed Machine Learning for Future Internet: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
 </li>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="">THz-based Rate-Splitting Multiple-Access (RSMA): Is It Better Than NOMA?</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="">THz-based Rate-Splitting Multiple-Access (RSMA): Is It Always Better Than NOMA?</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
 <li><p>N. C. Luong, <b>Q.-V. Pham</b>, T. Huynh-The, V. D. Nguyen, D. W. K. Ng, S. Chatzinotas, and D. Niyato, &ldquo;<a href="https://arxiv.org/abs/2212.06463">Edge Computing for Semantic Communication Enabled Metaverse: An Incentive Mechanism Design</a>,&rdquo; under review, <i>IEEE Network</i>.</p>
 </li>
@@ -83,13 +91,11 @@
 </li>
 <li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; submitted, <i>International Conference on Learning Representations (ICLR)</i>, 2023.</p>
 </li>
-<li><p>A. Samanta, <b>Q.-V. Pham</b>, N.-N. Dao, A. Muthanna, and S. Cho, &ldquo;<a href="">mISO: Incentivizing Demand-Agnostic Microservices for Edge-Enabled IoT Networks</a>,&rdquo; under revision, <i>Transactions on Services Computing</i>.</p>
-</li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, T.-T. Nguyen, D. B. da Costa, and S. Kim, &ldquo;<a href="">Enhancing RIS-Aided Two-Way Full-Duplex Communication with Non-Orthogonal Multiple Access</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
-<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, Y. K. Tun, M. D. Hossain, and E.-N. Huh, &ldquo;<a href="">Optimization of Task Offloading for Microservice-enhanced Vehicular Edge Computing</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, Y. K. Tun, M. D. Hossain, and E.-N. Huh, &ldquo;<a href="">Optimization of Task Offloading for Microservice-enhanced Vehicular Edge Computing</a>,&rdquo; under review, <i>IEEE Communications Letters</i>.</p>
 </li>
-<li><p>M. Le, <b>Q.-V. Pham</b>, Q. V. Do, and W.-J. Hwang, &ldquo;<a href="">Resource Allocation in THz-NOMA-enabled UAV Systems Based on Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+<li><p>M. Le, <b>Q.-V. Pham</b>, Q. V. Do, and W.-J. Hwang, &ldquo;<a href="">Resource Allocation in THz-NOMA-enabled UAV Systems Based on Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>.</p>
 </li>
 <li><p>Q. V. Do, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="">QoE-Driven Task Association and Resource Allocation in Aerial-Access Edge Computing Using Deep Reinforcement Learning</a>,&rdquo; under revision, <i>IEEE Transactions on Communications</i>.</p>
 </li>
@@ -102,6 +108,8 @@
 <p><div id="2022 and In Press"></p>
 <h2>2023 and In Press</h2>
 <ol>
+<li><p>A. Samanta, <b>Q.-V. Pham</b>, N.-N. Dao, A. Muthanna, and S. Cho, &ldquo;<a href="https://ieeexplore.ieee.org/document/10173593/">mISO: Incentivizing Demand-Agnostic Microservices for Edge-Enabled IoT Networks</a>,&rdquo; <i>Transactions on Services Computing</i>, in press.</p>
+</li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10132045">STAR-RIS Enabled Short-Packet NOMA Systems</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://ieeexplore.ieee.org/document/10109100">AI-enabled mm-Waveform Configuration for Autonomous Vehicles with Integrated Communication and Sensing</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
@@ -251,7 +259,7 @@
 </ol>
 <p></div></p>
 <p><div id="2020 and Before"></p>
-<h2>2020</h2>
+<h2>2020 and Before</h2>
 <ol>
 <li><p>M. J. Piran, <b>Q.-V. Pham</b>, S. M. R. Islam, S. Cho, B. Bae, D.-Y. Suh, and Z. Han, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S1084804520302332">Multimedia Communication over Cognitive Radio Networks from QoS/QoE Perspective: A Comprehensive Survey</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, vol. 172, no. 10, pp. 102759, Dec. 2020.</p>
 </li>
@@ -310,7 +318,7 @@
 </li>
 <li><p>T.-H. Vu, K.-T. Nguyen, <b>Q.-V. Pham</b>, T. Huynh-The, D. B. da Costa, V. N. Q. Bao, and S. Kim, &ldquo;<a href="">Outage Performance of THz-aided NOMA Systems with Spherical Stochastic Model</a>,&rdquo; <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
 </li>
-<li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, and V. J. Reddi, &ldquo;<a href="">Solving Complex Sequential Decision-Making Problems by Deep Reinforcement Learning with Heuristic Rules</a>,&rdquo; <i>International Conference on Computational Science (ICCS)</i>, Prague, Czech Republic, Jul. 2023.</p>
+<li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, and V. J. Reddi, &ldquo;<a href="http://dx.doi.org/10.1007/978-3-031-36021-3_30">Solving Complex Sequential Decision-Making Problems by Deep Reinforcement Learning with Heuristic Rules</a>,&rdquo; <i>International Conference on Computational Science (ICCS)</i>, Prague, Czech Republic, Jul. 2023.</p>
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, M. Debbah, and S. Kim, &ldquo;<a href="">Physical-Layer Security in Short-Packet NOMA Systems with Untrusted Near User</a>,&rdquo; <i>IEEE International Conference on Communications (ICC)</i>, Rome, Italy, May 2023.</p>
 </li>
@@ -378,7 +386,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-25 13:19:54 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-07-08 12:07:53 SE Asia Standard Time.
 </div>
 </div>
 </td>
