--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="Misc\Portrait_Viet.jpg" alt="" width="180px" height="230px" />&nbsp;</td>
-<td align="left"><p><a href="mailto:viet.pham@tcd.ie">Viet Quoc PHAM</a> <br />
+<td align="left"><p><a href="mailto:viet.pham@tcd.ie">Viet Quoc Pham</a> <br />
 [first name] [middle name] [family name] <br />
 Assistant Professor, Ph.D. <br /> 
 <a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a> (TCD)</p>
@@ -85,7 +85,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>[10/2022] Congratulations Duong for winning a best paper award from IEEE ATC 2022 for his work on <a href="">FL for Massive IoT</a>. </p>
 </li>
-<li><p>[02/2022] I have been invited to serve as an editorial member for <a href="https://www.nature.com/srep/">Scientific Reports</a> [Nature, Q1, IF 4.379]. </p>
+<li><p>[02/2022] I have been invited to serve as an editorial member for <a href="https://www.nature.com/srep/">Scientific Reports</a>. </p>
 </li>
 <li><p>[12/2021] I have received the golden globe award 2021 from the Ministry of Science and Technology, Vietnam. <br /></p>
 </li>
@@ -95,7 +95,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>[01/2021] I have received the <a href="Misc/Rv_Award_TVT_2020.pdf">Top Reviewer Award</a> from IEEE Transactions on Vehicular Technology in 2020.</p>
 </li>
-<li><p>[10/2020] <font color=red size=+0.5><b>Hot!!!</b></font> I have been invited as an editor of <a href="https://www.journals.elsevier.com/journal-of-network-and-computer-applications">Journal of Network and Computer Applications</a> [Elsevier, Q1, IF 6.281]</p>
+<li><p>[10/2020] <font color=red size=+0.5><b>Hot!!!</b></font> I have been invited as an editor of <a href="https://www.journals.elsevier.com/journal-of-network-and-computer-applications">Journal of Network and Computer Applications</a>.</p>
 </li>
 <li><p>[10/2019] My paper on <a href="https://ieeexplore.ieee.org/document/8917566">MEC-NOMA using coalitional games</a> has been published by the IEEE Transactions on Vehicular Technology.</p>
 </li>
@@ -131,9 +131,9 @@ Assistant Professor, Ph.D. <br />
 <p><div id="About Me"></p>
 <h2>About Me <a href="Misc\Curriculum_Vitae_Pham.pdf"><font color=red size=+0.5>(<b>CV</a> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=red size=+0.5></b>CV of Failure</a><b></font></b></font> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5><b>Photo</a>)</b></font></font></h2>
 <p>Quoc-Viet Pham received the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. 
-He is currently an Assistant Professor in Networks and Distributed Systems with the School of Computer Science and Statistics, Trinity College, The University of Dublin, Ireland. 
+He is currently an Assistant Professor in Networks and Distributed Systems with the School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin, Ireland. 
 He is also an ADVANCE CRT supervisor and an Associate Investigator at the CONNECT centre, Ireland. 
-Prior to joining TCD, he was in various academic positions with Kyung Hee University (postdoctoral researcher, 2017-2018), Changwon National University (research professor, 2018-2019), and Pusan National University (research professor, 2020-2023). </p>
+Prior to joining TCD, he was in various academic positions with Kyung Hee University, Changwon National University, and Pusan National University. </p>
 <p>He specialises in applying convex optimisation, game theory, and machine learning to analyse and optimise cloud edge computing, wireless networks, and IoT systems. 
 Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). 
 He was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. 
@@ -142,12 +142,12 @@ the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 202
 and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, 
 a co-recipient of an IEEE ATC Best Paper Award in 2022,
 and Enterprise Ireland Coordination Support Award in 2023. 
-He is an Editor of the Journal of Network and Computer Applications and Scientific Reports, 
+He is an Editor of IEEE Communications Letters, Journal of Network and Computer Applications and Scientific Reports, 
 and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications.</p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-07-05 00:02:56 Korea Standard Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-07-13 05:50:44 Arab Standard Time.
 </div>
 </div>
 </td>
